--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ repositories {
 }
 
 group = 'cn.leancloud.android'
-version = '1.3.1-SNAPSHOT'
+version = '1.3.1-leancloud'
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
