--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cn.leancloud.android</groupId>
     <artifactId>Java-WebSocket</artifactId>
-    <version>1.3.1-leancloud</version>
+    <version>1.3.2-leancloud-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Java WebSocket</name>
     <description>A barebones WebSocket client and server implementation written in 100% Java
